feat: update find food
