# apps/server/docs/swagger.json
@@ -54,7 +54,7 @@
           "200": {
             "description": "OK",
             "schema": {
-              "$ref": "#/definitions/food.Food"
+              "$ref": "#/definitions/food.FindFoodResp"
             }
           },
           "500": {
@@ -230,6 +230,20 @@
     }
   },
   "definitions": {
+    "food.FindFoodResp": {
+      "type": "object",
+      "properties": {
+        "data": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/food.Food"
+          }
+        },
+        "page": {
+          "type": "integer"
+        }
+      }
+    },
     "food.Food": {
       "type": "object",
       "properties": {
